Fixed mobile responsiveness and footer visibility

--- a/resources/initial.scss
+++ b/resources/initial.scss
@@ -70,22 +70,38 @@ main {
     &.desktop {
         margin: 2rem auto;
     }
+    &.mobile {
+        padding: 1rem 1rem;
+    }
 }
 
-/*@media only screen and (max-width: 480px){
-    .container {
-        padding: 1.25rem 2rem;
-    }
-    .tablet {
-        display: none;
-    }
-    .desktop {
-        display: none;
-    }
-    .mobile {
-        display: block;
-    }
-}*/
+//Media queries
+@media only screen and (max-width: 780px) and (orientation: portrait), (max-width: 1024px) and (orientation: landscape){
+    main .desktop {display: none;}
+    main .tablet {display: block;}
+}
+
+@media only screen 
+    and (min-device-width: 320px)
+    and (max-device-width: 480px)
+    and (-webkit-min-device-pixel-ratio: 2)
+    and (orientation:portrait) {
+        main .tablet {
+            display: none;
+        }
+        main .desktop {
+            display: none;
+        }
+        main .mobile {
+            display: block;
+            h1 {
+                font-size: 2rem;
+            }
+            h3 {
+                font-size: 1rem;
+            }
+        }
+}
 
 h1 {
     @include raleway();
@@ -124,12 +140,6 @@ h3 {
     font-size: 1.25rem;
     line-height: 1.5;
     padding-top: 1.25rem;
-}
-
-
-@media only screen and (max-width: 780px) and (orientation: portrait), (max-width: 1024px) and (orientation: landscape){
-    main .desktop {display: none;}
-    main .tablet {display: block;}
 }
 
 //Animations//
@@ -375,9 +385,21 @@ footer {
     right: 5%;
     background: transparent;
     color:$snow;
-    opacity: 0.05;
+    opacity: 0.2;
     transition: opacity 2s;
     font-style: italic;
 
     &:hover {opacity: 0.8};
+
+    @media only screen 
+    and (min-device-width: 320px)
+    and (max-device-width: 480px)
+    and (-webkit-min-device-pixel-ratio: 2)
+    and (orientation:portrait),
+    (max-width: 780px) 
+    and (orientation: portrait), 
+    (max-width: 1024px) 
+    and (orientation: landscape) {
+        opacity: 0.3;
+    }
 }
