--- a/resources/style.css
+++ b/resources/style.css
@@ -46,21 +46,38 @@ main .tablet, main .mobile {
 .container.desktop {
   margin: 2rem auto;
 }
+.container.mobile {
+  padding: 1rem 1rem;
+}
 
-/*@media only screen and (max-width: 480px){
-    .container {
-        padding: 1.25rem 2rem;
-    }
-    .tablet {
-        display: none;
-    }
-    .desktop {
-        display: none;
-    }
-    .mobile {
-        display: block;
-    }
-}*/
+@media only screen and (max-width: 780px) and (orientation: portrait), (max-width: 1024px) and (orientation: landscape) {
+  main .desktop {
+    display: none;
+  }
+
+  main .tablet {
+    display: block;
+  }
+}
+@media only screen and (min-device-width: 320px) and (max-device-width: 480px) and (-webkit-min-device-pixel-ratio: 2) and (orientation: portrait) {
+  main .tablet {
+    display: none;
+  }
+
+  main .desktop {
+    display: none;
+  }
+
+  main .mobile {
+    display: block;
+  }
+  main .mobile h1 {
+    font-size: 2rem;
+  }
+  main .mobile h3 {
+    font-size: 1rem;
+  }
+}
 h1 {
   font-family: "Raleway", sans-serif;
   font-style: normal;
@@ -108,15 +125,6 @@ h3 {
   padding-top: 1.25rem;
 }
 
-@media only screen and (max-width: 780px) and (orientation: portrait), (max-width: 1024px) and (orientation: landscape) {
-  main .desktop {
-    display: none;
-  }
-
-  main .tablet {
-    display: block;
-  }
-}
 .container.desktop.look-here {
   transition: all 1s;
   opacity: 0.6;
@@ -377,12 +385,17 @@ footer {
   right: 5%;
   background: transparent;
   color: snow;
-  opacity: 0.05;
+  opacity: 0.2;
   transition: opacity 2s;
   font-style: italic;
 }
 footer:hover {
   opacity: 0.8;
+}
+@media only screen and (min-device-width: 320px) and (max-device-width: 480px) and (-webkit-min-device-pixel-ratio: 2) and (orientation: portrait), (max-width: 780px) and (orientation: portrait), (max-width: 1024px) and (orientation: landscape) {
+  footer {
+    opacity: 0.3;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
